# visualprior_act_so101

./: .gitignore  LICENSE  README.md  SMOLVLA.ipynb  diagnose_batch.py  pyproject.toml
docs/: INTEGRATION_NOTES.md  QUICKSTART.md  TROUBLESHOOTING.md
lerobot_policy_visualprior_act/: __init__.py  configuration_visualprior_act.py  modeling_visualprior_act.py  processor_visualprior_act.py
lerobot_policy_visualprior_act/encoders/: __init__.py  base.py  dinov2_encoder.py  resnet_baseline.py  sam2_encoder.py  unet_encoder.py  vae_family.py  yolo_encoder.py
lerobot_policy_visualprior_act/pretraining/: __init__.py  cli.py  hub_utils.py
lerobot_policy_visualprior_act/utils/: __init__.py  projector.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train-2/: args.yaml  results.csv
scripts/: eval_robot.sh  prefetch_pretrained_encoders.py  pretrain_all_vae_variants.sh  push_encoder_to_hub.py  train_all_models.sh  train_family_cd.sh  train_vae_models.sh
tests/: test_config.py  test_encoders.py
